--- a/FoodScanner/app/src/main/res/layout/activity_my.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_my.xml
@@ -9,7 +9,7 @@
     tools:context=".MyActivity">
 
     <TextView
-        android:text="@string/hello_world"
+        android:text='"afdafsdfasdf"'
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
