--- a/FoodScanner/app/src/main/res/values/colors.xml
+++ b/FoodScanner/app/src/main/res/values/colors.xml
@@ -11,5 +11,7 @@
     <color name="Divider">#B6B6B6</color>
 
     <color name="White">#FFFFFF</color>
+    <color name="White.Transparent">#CCFFFFFF</color>
+    <color name="Grey.Light">#F4F4F4</color>
 
 </resources>
