--- a/FoodScanner/app/src/main/res/layout/activity_food_item.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_food_item.xml
@@ -4,14 +4,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="senior_project.foodscanner.activities.MealCalendarActivity">
+    tools:context="senior_project.foodscanner.activities.FoodItemActivity">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:background="#ab88e9ff" />
+    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
