--- a/FoodScanner/app/src/main/res/menu/menu_meal_calendar.xml
+++ b/FoodScanner/app/src/main/res/menu/menu_meal_calendar.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="senior_project.foodscanner.activities.MealCalendar">
+    tools:context="senior_project.foodscanner.activities.MealCalendarActivity">
     <item android:id="@+id/action_login"
         android:title="@string/action_login"
         app:showAsAction="ifRoom" />
