--- a/FoodScanner/app/src/main/res/layout/activity_meal_details.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_meal_details.xml
@@ -9,4 +9,12 @@
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Scan Food"
+        android:id="@+id/button_foodscanner"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
