--- a/FoodScanner/app/src/main/res/layout/activity_food_item.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_food_item.xml
@@ -6,7 +6,32 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="senior_project.foodscanner.activities.FoodItemActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/searchTerm"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/foodSearchButton"
+        android:layout_toStartOf="@+id/foodSearchButton"
+        android:singleLine="false"
+        android:hint="Name of food to be added" />
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Search"
+        android:id="@+id/foodSearchButton"
+        android:layout_alignBottom="@+id/searchTerm"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/resultList"
+        android:layout_below="@+id/searchTerm"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
