--- a/FoodScanner/app/src/main/res/layout/activity_food_item.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_food_item.xml
@@ -15,8 +15,9 @@
         android:layout_alignParentStart="true"
         android:layout_toLeftOf="@+id/foodSearchButton"
         android:layout_toStartOf="@+id/foodSearchButton"
-        android:singleLine="false"
-        android:hint="Name of food" />
+        android:singleLine="true"
+        android:hint="Name of food"
+        android:imeOptions="actionSearch" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
