--- a/FoodScanner/app/src/main/res/layout/list_layout_meal.xml
+++ b/FoodScanner/app/src/main/res/layout/list_layout_meal.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+              android:layout_height="wrap_content"
                 android:descendantFocusability="blocksDescendants">
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -19,13 +19,13 @@
               android:layout_toStartOf="@+id/button_delete"
               android:text="Meal Item"/>
 
-    <Button
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Delete"
         android:id="@+id/button_delete"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/meal_text"/>
+        android:layout_alignBottom="@+id/meal_text"
+        android:src="@drawable/abc_ic_clear_mtrl_alpha"/>
 </RelativeLayout>
