--- a/FoodScanner/app/src/main/res/layout/list_layout_meal.xml
+++ b/FoodScanner/app/src/main/res/layout/list_layout_meal.xml
@@ -9,23 +9,26 @@
               android:id="@+id/meal_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:textAppearance="?android:attr/textAppearanceSmall"
+              android:textAppearance="@android:style/TextAppearance.Medium"
               android:textColor="@color/Text.Secondary"
               android:gravity="center_vertical"
               android:paddingLeft="6dip"
               android:paddingRight="6dip"
               android:minHeight="?android:attr/listPreferredItemHeightSmall"
+              android:text="Meal Item"
+              android:layout_alignParentTop="true"
+              android:layout_alignParentLeft="true"
+              android:layout_alignParentStart="true"
               android:layout_toLeftOf="@+id/button_delete"
-              android:layout_toStartOf="@+id/button_delete"
-              android:text="Meal Item"/>
+              android:layout_toStartOf="@+id/button_delete"/>
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_delete"
+        android:src="@drawable/abc_ic_clear_mtrl_alpha"
+        android:layout_alignBottom="@+id/meal_text"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/meal_text"
-        android:src="@drawable/abc_ic_clear_mtrl_alpha"/>
+        android:layout_alignParentEnd="true"/>
 </RelativeLayout>
