--- a/FoodScanner/app/src/main/res/values/styles.xml
+++ b/FoodScanner/app/src/main/res/values/styles.xml
@@ -6,8 +6,19 @@
         <item name="colorPrimary">@color/Primary</item>
         <item name="colorPrimaryDark">@color/Primary.Dark</item>
         <item name="colorAccent">@color/Accent</item>
+        <item name="android:textAppearanceButton">@style/TextAppearance.AppTheme.Button</item>
+        <item name="android:buttonStyle">@style/Widget.AppTheme.Button</item>
     </style>
 
+    <style name="TextAppearance.AppTheme.Button" parent="TextAppearance.AppCompat.Button">
+        <item name="textAllCaps">false</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="Widget.AppTheme.Button" parent="Widget.AppCompat.Button">
+        <!-- <item name="android:minHeight">1dip</item> -->
+        <item name="android:minWidth">72dip</item>
+    </style>
 
     <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/Primary</item>
