--- a/FoodScanner/app/src/main/res/layout/login_activity.xml
+++ b/FoodScanner/app/src/main/res/layout/login_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@color/Primary">
@@ -29,10 +30,9 @@
             android:id="@+id/login_google_plus_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
             android:layout_marginLeft="3dp"
             android:layout_marginRight="3dp"
-            android:background="@color/Primary.Dark"
+            app:backgroundTint="@color/Primary.Dark"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
             android:textColor="@color/White"
             android:text="@string/login_google_plus"/>
