Fixed Button Color.
Devices below Lollipop used an AppCompatButton but it was always grey instead of using the app color.  A style has been added for the login button so it displays correctly on all devices.

--- a/FoodScanner/app/src/main/res/layout/login_activity.xml
+++ b/FoodScanner/app/src/main/res/layout/login_activity.xml
@@ -34,7 +34,7 @@
             android:layout_marginRight="3dp"
             android:paddingTop="6dp"
             android:paddingBottom="6dp"
-            android:backgroundTint="@color/Primary.Dark"
+            android:theme="@style/Button.Primary.Dark"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
             android:textColor="@color/White"
             android:text="@string/login_google_plus"/>
