Check for Login on Splash Screen.
The app no longer opens the login activity to check if the user is logged in before continuing to the calendar activity.

Changed the "LOG IN" button to say "LOG OUT"

--- a/FoodScanner/app/src/main/res/menu/menu_meal_calendar.xml
+++ b/FoodScanner/app/src/main/res/menu/menu_meal_calendar.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="senior_project.foodscanner.activities.MealCalendarActivity">
     <item android:id="@+id/action_login"
-        android:title="@string/action_login"
+        android:title="@string/action_logout"
         app:showAsAction="ifRoom" />
 </menu>
