--- a/FoodScanner/app/src/main/res/layout/activity_main.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_main.xml
@@ -27,4 +27,20 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="73dp" />
 
+    <LinearLayout
+        android:id="@+id/loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:background="@drawable/progress_background"/>
+
+    </LinearLayout>
+
 </RelativeLayout>
