--- a/FoodScanner/app/src/main/res/layout/activity_food_scanner.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_food_scanner.xml
@@ -13,5 +13,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="New Button"
+            android:id="@+id/button"
+            android:layout_gravity="center_horizontal|bottom"/>
     </FrameLayout>
 </RelativeLayout>
