--- a/FoodScanner/app/src/main/res/layout/activity_food_scanner.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_food_scanner.xml
@@ -9,16 +9,24 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/container_camera"
-        android:background="#898989"
+        android:background="#000000"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true">
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="New Button"
-            android:id="@+id/button"
-            android:layout_gravity="center_horizontal|bottom"/>
+        <ViewFlipper
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/viewFlipper_camera"
+            android:layout_gravity="center">
+
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                layout="@layout/camera_layout"/>
+
+        </ViewFlipper>
+
+
     </FrameLayout>
 </RelativeLayout>
