--- a/FoodScanner/app/src/main/res/menu/menu_meal_calendar.xml
+++ b/FoodScanner/app/src/main/res/menu/menu_meal_calendar.xml
@@ -2,7 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="senior_project.foodscanner.activities.MealCalendarActivity">
-    <item android:id="@+id/action_login"
-        android:title="@string/action_logout"
-        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        android:icon="@drawable/ic_settings_white"
+        app:showAsAction="always"/>
+
 </menu>
