--- a/FoodScanner/app/src/main/res/values/styles.xml
+++ b/FoodScanner/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/Primary</item>
         <item name="colorPrimaryDark">@color/Primary.Dark</item>
