--- a/FoodScanner/app/src/main/res/layout/activity_camera.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_camera.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="senior_project.foodscanner.activities.FoodScannerActivity">
+    tools:context="senior_project.foodscanner.activities.CameraActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
