--- a/FoodScanner/app/src/main/res/layout/image_browser_layout.xml
+++ b/FoodScanner/app/src/main/res/layout/image_browser_layout.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
-        android:background="@color/White">
+        android:background="#a2a2a2">
 
         <ImageSwitcher
             android:layout_width="wrap_content"
