--- a/FoodScanner/app/src/main/res/layout/activity_camera.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_camera.xml
@@ -4,7 +4,8 @@
                 android:layout_height="match_parent"
                 android:id="@+id/container_camera"
                 android:background="#000000"
-                tools:context="senior_project.foodscanner.activities.CameraActivity">
+                tools:context="senior_project.foodscanner.activities.CameraActivity"
+                android:theme="@style/AppTheme.NoActionBar">
 
         <ImageButton
             android:layout_width="wrap_content"
