--- a/FoodScanner/app/src/main/res/values/styles.xml
+++ b/FoodScanner/app/src/main/res/values/styles.xml
@@ -10,6 +10,10 @@
         <item name="android:buttonStyle">@style/Widget.AppTheme.Button</item>
     </style>
 
+    <style name="AppTheme.NoActionBar" parent="AppTheme">
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <style name="TextAppearance.AppTheme.Button" parent="TextAppearance.AppCompat.Button">
         <item name="textAllCaps">false</item>
         <item name="android:textAllCaps">false</item>
@@ -20,10 +24,6 @@
         <item name="android:minWidth">72dip</item>
     </style>
 
-    <style name="AppTheme.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorPrimary">@color/Primary</item>
-        <item name="colorPrimaryDark">@color/Primary.Dark</item>
-        <item name="colorAccent">@color/Accent</item>
-    </style>
+
 
 </resources>
