--- a/FoodScanner/app/src/main/res/values/styles.xml
+++ b/FoodScanner/app/src/main/res/values/styles.xml
@@ -14,6 +14,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="AppTheme.NoActionBar.Fullscreen" parent="AppTheme">
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
     <style name="TextAppearance.AppTheme.Button" parent="TextAppearance.AppCompat.Button">
         <item name="textAllCaps">false</item>
         <item name="android:textAllCaps">false</item>
