Added Time Format and Logout Dialog.
The time format button now saves the user's preference and correctly switches the hint on the button.

The logout button now brings up a confirmation dialog

--- a/FoodScanner/app/src/main/res/layout/activity_settings.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_settings.xml
@@ -35,8 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="@color/Text.Secondary"
-                android:text="testing"/>
+                android:textColor="@color/Text.Secondary"/>
 
         </LinearLayout>
 
