--- a/FoodScanner/app/src/main/res/values/colors.xml
+++ b/FoodScanner/app/src/main/res/values/colors.xml
@@ -7,7 +7,9 @@
     <color name="Accent">#FF5252</color>
 
     <color name="Text.Primary">#212121</color>
+    <color name="Text.Primary.Disabled">#808080</color>
     <color name="Text.Secondary">#727272</color>
+    <color name="Text.Secondary.Disabled">#A6A6A6</color>
     <color name="Divider">#B6B6B6</color>
 
     <color name="White">#FFFFFF</color>
