--- a/FoodScanner/app/src/main/res/values/styles.xml
+++ b/FoodScanner/app/src/main/res/values/styles.xml
@@ -39,4 +39,8 @@
         <item name="android:textColor">@color/White</item>
     </style>
 
+    <style name="TimePicker" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="colorAccent">@color/Primary</item>
+    </style>
+
 </resources>
