--- a/FoodScanner/app/src/main/res/layout/activity_meal_calendar.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_meal_calendar.xml
@@ -37,7 +37,7 @@
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
-                    android:src="@android:drawable/ic_media_rew"/>
+                    android:src="@drawable/arrow_left"/>
 
                 <Button
                     android:id="@+id/button_calendar"
@@ -59,7 +59,7 @@
                     android:layout_alignParentRight="true"
                     android:layout_alignParentTop="true"
                     android:focusableInTouchMode="false"
-                    android:src="@android:drawable/ic_media_ff"/>
+                    android:src="@drawable/arrow_right"/>
 
             </RelativeLayout>
 
