--- a/FoodScanner/app/src/main/res/layout/list_layout_meal.xml
+++ b/FoodScanner/app/src/main/res/layout/list_layout_meal.xml
@@ -5,6 +5,18 @@
               android:layout_height="wrap_content"
                 android:descendantFocusability="blocksDescendants">
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton_warning"
+        android:src="@android:drawable/ic_dialog_alert"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:backgroundTint="#dfdf00"
+        android:layout_alignBottom="@+id/meal_text"
+        android:visibility="visible"/>
+
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/meal_text"
               android:layout_width="match_parent"
@@ -16,19 +28,33 @@
               android:paddingRight="6dip"
               android:minHeight="?android:attr/listPreferredItemHeightSmall"
               android:text="Meal Item"
+              android:layout_toRightOf="@+id/imageButton_warning"
               android:layout_alignParentTop="true"
-              android:layout_alignParentLeft="true"
-              android:layout_alignParentStart="true"
-              android:layout_toLeftOf="@+id/button_delete"
-              android:layout_toStartOf="@+id/button_delete"/>
+              android:visibility="visible"
+              android:layout_toLeftOf="@+id/textView_nutr"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@android:style/TextAppearance.Medium"
+        android:textColor="@color/Text.Secondary"
+        android:gravity="center_vertical|right"
+        android:paddingLeft="6dip"
+        android:paddingRight="6dip"
+        android:text="0 cal"
+        android:id="@+id/textView_nutr"
+        android:layout_alignParentTop="true"
+        android:layout_toLeftOf="@+id/button_delete"
+        android:layout_alignBottom="@+id/meal_text"/>
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_delete"
         android:src="@drawable/abc_ic_clear_mtrl_alpha"
-        android:layout_alignBottom="@+id/meal_text"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/meal_text"/>
+
 </RelativeLayout>
