--- a/FoodScanner/app/src/main/res/layout/food_action_dialog.xml
+++ b/FoodScanner/app/src/main/res/layout/food_action_dialog.xml
@@ -10,9 +10,9 @@
         android:layout_marginTop="16dp"
         android:layout_marginLeft="6dp"
         android:layout_marginRight="6dp"
-        android:layout_marginBottom="0dp"
-        android:textAppearance="@android:style/TextAppearance.Medium"
-        android:textColor="@color/Text.Secondary"
+        android:layout_marginBottom="12dp"
+        android:textAppearance="@android:style/TextAppearance.Large"
+        android:textColor="@color/Text.Primary"
         android:text="Density Info"
         android:gravity="center_horizontal" />
     <TextView
@@ -23,8 +23,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="0dp"
-        android:textAppearance="@android:style/TextAppearance.Small"
-        android:textColor="@color/Text.Secondary"
+        android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
+        android:textColor="@color/Text.Primary"
         android:text="Value: Find density entry below."
         android:gravity="center_horizontal" />
     <TextView
@@ -35,11 +35,11 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="0dp"
-        android:textAppearance="@android:style/TextAppearance.Small"
-        android:textColor="@color/Text.Secondary"
+        android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
+        android:textColor="@color/Text.Primary"
         android:text="Entry: Find density entry below."
         android:gravity="center_horizontal" />
-    <EditText
+    <AutoCompleteTextView
         android:id="@+id/densitySearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,9 +47,8 @@
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginBottom="0dp"
-        android:textAppearance="@android:style/TextAppearance.Small"
-        android:textColor="@color/Text.Secondary"
+        android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
+        android:textColor="@color/Text.Primary"
         android:hint="Generic name of food item"
-        android:gravity="center_horizontal"
         android:layout_gravity="center_horizontal" />
 </LinearLayout>
