--- a/FoodScanner/app/src/main/res/layout/activity_meal_details.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_meal_details.xml
@@ -43,6 +43,8 @@
         android:layout_below="@+id/spinner_meal"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_above="@+id/button_foodscanner" />
+        android:layout_above="@+id/button_foodscanner"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp" />
 
 </RelativeLayout>
