--- a/FoodScanner/app/src/main/res/layout/food_serving_dialog.xml
+++ b/FoodScanner/app/src/main/res/layout/food_serving_dialog.xml
@@ -2,10 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:weightSum="1">
     <TextView
-        android:id="@+id/densityTitle"
-        android:layout_width="match_parent"
+        android:id="@+id/servingTitle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="6dp"
@@ -13,43 +14,35 @@
         android:layout_marginBottom="14dp"
         android:textAppearance="@android:style/TextAppearance.Large"
         android:textColor="@color/Text.Primary"
-        android:text="Density Info"
-        android:gravity="center_horizontal" />
+        android:text="Serving Info"
+        android:layout_gravity="center_horizontal" />
     <TextView
-        android:id="@+id/densityValue"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="0dp"
-        android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
-        android:textColor="@color/Text.Primary"
-        android:text="Value: Find density entry below."
-        android:gravity="center_horizontal" />
-    <TextView
-        android:id="@+id/densityEntry"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="0dp"
-        android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
-        android:textColor="@color/Text.Primary"
-        android:text="Entry: Find density entry below."
-        android:gravity="center_horizontal" />
-    <AutoCompleteTextView
-        android:id="@+id/densitySearch"
+        android:id="@+id/servingDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="0dp"
         android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
         android:textColor="@color/Text.Primary"
-        android:hint="Generic name of food item"
+        android:text="Number of Servings:"
+        android:layout_gravity="center_horizontal" />
+    <EditText
+        android:id="@+id/servingEntry"
+        android:inputType="numberDecimal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="0dp"
+        android:textAppearance="@android:style/TextAppearance.Theme.Dialog"
+        android:textColor="@color/Text.Primary"
+        android:text=""
         android:layout_gravity="center_horizontal"
-        android:singleLine="true" />
+        android:singleLine="true"
+        android:hint="N/A"
+        android:gravity="center_horizontal" />
+
 </LinearLayout>
