--- a/FoodScanner/app/src/main/res/layout/list_layout_added_food.xml
+++ b/FoodScanner/app/src/main/res/layout/list_layout_added_food.xml
@@ -12,6 +12,8 @@
         android:gravity="center_vertical"
         android:paddingLeft="6dip"
         android:paddingRight="6dip"
+        android:paddingBottom="6dip"
+        android:paddingTop="6dip"
         android:minHeight="?android:attr/listPreferredItemHeightSmall" />
 
 </LinearLayout>
