--- a/FoodScanner/app/src/main/res/layout/activity_painting.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_painting.xml
@@ -6,7 +6,7 @@
     android:paddingStart="0dp"
     android:id="@+id/rel">
 
-    <SeniorProject.foodscanner.PaintingView
+    <senior_project.foodscanner.PaintingView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/paintingView"
@@ -27,7 +27,7 @@
         android:layout_alignParentStart="true"
         android:visibility="invisible" />
 
-    <SeniorProject.foodscanner.DrawView
+    <senior_project.foodscanner.DrawView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/rectangleView"
