Base for Tutorial Messages.
Added an icon to bring up a page's tutorial.

Added an animation to have the message animate from the view it is describing (for the first message).

--- a/FoodScanner/app/src/main/res/menu/menu_meal_calendar.xml
+++ b/FoodScanner/app/src/main/res/menu/menu_meal_calendar.xml
@@ -4,6 +4,12 @@
     tools:context="senior_project.foodscanner.activities.MealCalendarActivity">
 
     <item
+        android:id="@+id/action_tutorial"
+        android:title="@string/action_tutorial"
+        android:icon="@drawable/ic_help"
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:icon="@drawable/ic_settings_white"
