--- a/FoodScanner/app/src/main/res/layout/activity_meal_calendar.xml
+++ b/FoodScanner/app/src/main/res/layout/activity_meal_calendar.xml
@@ -70,8 +70,45 @@
             android:id="@+id/listView_meals"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/container_total"
+            android:layout_above="@+id/container_warning"
             android:layout_below="@+id/container_date"/>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:id="@+id/container_warning"
+            android:layout_above="@+id/container_total"
+            android:background="@color/Warning"
+            android:padding="10dp">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/imageView2"
+                    android:src="@android:drawable/ic_dialog_alert"
+                    android:layout_gravity="center_vertical"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Meals are not synced with the server!"
+                    android:id="@+id/textView2"
+                    android:textStyle="bold"
+                    android:textAlignment="center"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:textAppearance="@android:style/TextAppearance.Medium"/>
+            </LinearLayout>
+        </FrameLayout>
 
         <LinearLayout
             android:id="@+id/container_total"
