--- a/FoodScanner/app/src/main/res/layout/list_layout_meal.xml
+++ b/FoodScanner/app/src/main/res/layout/list_layout_meal.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:backgroundTint="#dfdf00"
+        android:backgroundTint="@color/Warning"
         android:layout_alignBottom="@+id/meal_text"
         android:visibility="visible"/>
 
